File Browser: Date and Size info overlapping in 'Horizontal List' Display Mode #119635

Closed
opened 2024-03-18 19:35:18 +01:00 by mk02tvr · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61
Dell XPS 17, display resolution 3840 x 2400, Colour profile 14D6, Custom Scale Factor = 185.

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-16 18:44, hash: 714ebd6890c2 & version 4.2.0 Alpha commit date: 17 Mar 2024, 18:08, hash: e4e4b51c83
Worked: version: 4.0.2 Stable commit date: 05 Dec 2023, 07:41, hash: 9be62e85b7
Resolution Scale 1.02 in all Blender versions (above).

Short description of error
Dates overwritten or incomplete in File Viewer, Display Mode: Horizontal List.
Please see the example screengrabs.
Check/Uncheck the Date Option causing the window to redraw, rectifies the issue in all cases.

Exact steps for others to reproduce the error

  • Go to File -> Open... (or Preferences - Addons - Install - File View).
  • Set Display Mode to Horizontal List
  • Browse to a directory with few files
  • Navigate to a directory with many files
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 Dell XPS 17, display resolution 3840 x 2400, Colour profile 14D6, Custom Scale Factor = 185. **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-16 18:44, hash: `714ebd6890c2` & version 4.2.0 Alpha commit date: 17 Mar 2024, 18:08, hash: e4e4b51c833f Worked: version: 4.0.2 Stable commit date: 05 Dec 2023, 07:41, hash: 9be62e85b727 Resolution Scale 1.02 in all Blender versions (above). **Short description of error** Dates overwritten or incomplete in File Viewer, Display Mode: Horizontal List. Please see the example screengrabs. Check/Uncheck the Date Option causing the window to redraw, rectifies the issue in all cases. **Exact steps for others to reproduce the error** - Go to File -> Open... (or Preferences - Addons - Install - File View). - Set Display Mode to `Horizontal List` - Browse to a directory with few files - Navigate to a directory with many files
mk02tvr added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-03-18 19:35:19 +01:00
Germano Cavalcante changed title from mk02tvr to File Browser: Date and Size info overlapping in 'Horizontal List' Display Mode 2024-03-19 00:18:59 +01:00

Caused by 07820b0703
@Harley ^

Caused by 07820b0703 @Harley ^
Harley Acheson self-assigned this 2024-03-19 02:05:01 +01:00
Pratik Borhade added this to the 4.1 milestone 2024-03-20 10:02:07 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-20 13:46:08 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-20 17:06:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119635
No description provided.